--- a/static/download/style.css
+++ b/static/download/style.css
@@ -1,3 +1,20 @@
 .margin-t-4 {
-	margin-top: 4rem;
+  margin-top: 4rem;
+}
+
+.search_games {
+  width: 95%;
+  background-color: #FFFFFF;
+  margin: 0 auto;
+  border-radius: 5px;
+}
+
+.top_games {
+  width: 95%;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+}
+
+td.text-center a {
+  color: #4E90FF;
 }
