--- a/static/css/global.css
+++ b/static/css/global.css
@@ -107,7 +107,7 @@ html {
 }
 
 body {
-    font-size: 1.2rem;
+    font-size: 14px;
     font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
     /*background-color: #ddd;*/
     min-width: 320px;
@@ -505,9 +505,9 @@ body {
 .quit-div{margin: 2rem 0 0;text-align: right;}
 .quit-div button{margin-right: 2rem;border-radius: .3rem;padding:.5rem 1rem;border: 1px solid rgba(228, 228, 228, 1);background-color: #F2F2F2;}
 .log-img{background-color: #10AEFF;margin:0 auto;border-radius: 50%; width:7rem;height: 7rem;line-height: 7rem;}
-.you-name{font-family: 'Arial Negreta', 'Arial';font-weight: 700;font-size: 2.5rem;text-align: center;margin: 1rem 0;}
+.you-name{font-family: 'Arial Negreta', 'Arial';font-weight: 700;font-size: 25px;text-align: center;margin: 1rem 0;}
 
-.show-p{margin:1.5rem 0 0 2rem;font-size: 1.4rem;}
+.show-p{margin:1.5rem 0 0 2rem;font-size: 15px;}
 .select-area{position: fixed;bottom: 0;left:0;width: 100%;border-top: 1px solid rgba(228, 228, 228, 1);}
 .select-area>div{text-align: center;float:left;}
 .select-item{display: inline-block;width: 49.9%;border-bottom: 1px solid rgba(228, 228, 228, 1);padding: 3rem 0;position: relative}
@@ -515,28 +515,28 @@ body {
 .bg-0{background-color: #0BBA05;}
 .bg-f{background-color: #FF0000;}
 .bg-e{background-color: #E4E4E4;}
-.select-item p{font-family: 'Arial Negreta', 'Arial';font-weight: 700;color: #666666;margin-top: .5rem;font-size: 1.6rem;}
+.select-item p{font-family: 'Arial Negreta', 'Arial';font-weight: 700;color: #666666;margin-top: .5rem;font-size: 14px;}
 .left-b{border-left: 1px solid rgba(228, 228, 228, 1);}
-.wangheng{text-align: center;color: #10AEFF;margin: 1.5rem 0;font-size: 1.6rem;width: 100%;}
+.wangheng{text-align: center;color: #10AEFF;margin: 1.5rem 0;font-size: 14px;width: 100%;}
 
 .c-4{color: #4E90FF !important;}
 .c-b{color: #BCBCBC !important;}
 .bottom-fxied{position: fixed;bottom: 0;display: flex;width: 100%;background-color: #F2F2F2;padding-top: .5rem;}
 .bottom-fxied>div{flex: 1;text-align: center;}
 .bottom-fxied p{margin-top: .2rem;color: #82858B;}
-.prompt{margin: 2.2rem 0 0 2rem;font-size: 1.6rem;}
+.prompt{margin: 10px;font-size: 14px;}
 .machine-number{margin-left: 2rem;}
 .machine-number>div{display: inline-block;text-align: center;width: 29%;margin-top: 2rem;}
 
-.content-block{overflow: hidden;margin-bottom: 1.6rem;background-color: #ffffff;padding: .6rem .6rem;font-size: 1.3rem;}
-.content-block>h3{font-weight: 700;font-size: 1.6rem;}
-.content-block>p{margin: .8rem 0;min-height: 5rem;overflow: hidden;}
+.content-block{overflow: hidden;margin-bottom: 1.6rem;background-color: #ffffff;padding: .6rem .6rem;font-size: 14px;}
+.content-block>h3{font-weight: 700;font-size: 16px;}
+.content-block>p{margin: .8rem 0;min-height: 5rem;overflow: hidden;line-height: 20px;}
 .content-bottom>span{margin-right: 1rem;}
 .content-block-m>.content-bottom>span.pull-right{color: #4E90FF;}
 .ad-Reply{background-color: #F2F2F2;padding: .5rem .1rem;margin: 0 0 .4rem 0;}
 .ad-Reply>span{color: #4E90FF;}
-.name-title{position:fixed;top:0;color: #ffffff;background-color: #10AEFF;width: 100%;height: 3rem;line-height:3rem;font-size: 1.6rem;padding: 0 .6rem;overflow: hidden;}
-.name-title a{color: #ffffff;border-left: 1px solid #ffffff;padding: 0 1.2rem;font-size: 1.3rem;}
+.name-title{position:fixed;top:0;color: #ffffff;background-color: #10AEFF;width: 100%;height: 3rem;line-height:3rem;font-size: 15px;padding: 0 .6rem;overflow: hidden;}
+.name-title a{color: #ffffff;border-left: 1px solid #ffffff;padding: 0 1.2rem;font-size: 15px;}
 .name-title a img{vertical-align: middle;margin-top: -.3rem}
 .title-name{margin: 1.5rem 0 1.2rem 1.5rem;font-size: 1.5rem;font-weight: 700;}
 .margin-l-1{margin-left: 1.5rem;}
