--- a/static/css/global.css
+++ b/static/css/global.css
@@ -538,7 +538,7 @@ body {
 .name-title{position:fixed;top:0;color: #ffffff;background-color: #10AEFF;width: 100%;height: 3rem;line-height:3rem;font-size: 15px;padding: 0 .6rem;overflow: hidden;}
 .name-title a{color: #ffffff;border-left: 1px solid #ffffff;padding: 0 1.2rem;font-size: 15px;}
 .name-title a img{vertical-align: middle;margin-top: -.3rem}
-.title-name{margin: 1.5rem 0 1.2rem 1.5rem;font-size: 1.5rem;font-weight: 700;}
+.title-name{margin: 1.5rem 0 1.2rem 1.5rem;font-size: 1.5rem;font-weight: 700;z-index: 5;}
 .margin-l-1{margin-left: 1.5rem;}
 .game-ranking>p{width: 50%;font-size: 1.3rem;float: left;margin: 0 0 1rem 0;}
 .search-hint{color: #BCBCBC;margin: .7rem 0;}
