--- a/static/login/style.css
+++ b/static/login/style.css
@@ -1,99 +1,111 @@
 * {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 .has-error .form-control {
-  -webkit-box-shadow: none;
-  box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 .has-error .form-control:focus {
-  -webkit-box-shadow: none;
-  box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 .has-success .form-control {
-  -webkit-box-shadow: none;
-  box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 .has-success .form-control:focus {
-  -webkit-box-shadow: none;
-  box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 footer {
-  background: url(../../static/images/u2702.png) no-repeat;
-  background-size: cover;
-  position: fixed;
-  bottom: 0;
-  z-index: -1;
-  margin: 0 auto;
-  text-align: center;
-  width: 100%;
-  height: 290px;
+	background: url(../../static/images/u2702.png) no-repeat;
+	background-size: cover;
+	position: fixed;
+	bottom: 0;
+	z-index: -1;
+	margin: 0 auto;
+	text-align: center;
+	width: 100%;
+	height: 290px;
 }
 
 footer p {
-  color: #ffffff;
-  font-size: 1.6rem;
-  position: fixed;
-  bottom: 8px;
-  width: 100%;
+	color: #ffffff;
+	font-size: 1.6rem;
+	position: fixed;
+	bottom: 8px;
+	width: 100%;
 }
 
 form div {
-  padding: 10px 0px 0px 0px;
+	padding: 10px 0px 0px 0px;
 }
 
 form button {
-  position: relative;
-  top: 15px;
+	position: relative;
+	top: 15px;
 }
 
 .container {
-  width: 90%;
+	width: 90%;
 }
 
 .subimt_btn {
-  margin-top: 40px;
-  background-color: white;
-  color: chartreuse;
-  border: 1px solid chartreuse;
-}
-.login_msg {
-  color: red;
+	margin-top: 40px;
+	background-color: white;
+	color: chartreuse;
+	border: 1px solid chartreuse;
 }
 
-.btn:hover,
-.btn:focus,
-.btn.focus {
-  color: chartreuse;
-  text-decoration: none;
+.login_msg {
+	margin-top: 15px;
+	color: red;
+	font-size: 15px;
+	font-weight: bold;
+}
+
+.btn:hover, .btn:focus, .btn.focus {
+	color: chartreuse;
+	text-decoration: none;
 }
 
 .input-opacity {
-  opacity: 0.6;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset;
-  height: 34px;
-  padding: 6px 12px;
-  border: none;
-  border-bottom: 1px solid;
-  border-radius: 0px;
-  background-color: #fff;
+	opacity: 0.6;
+	height: 34px;
+	padding: 6px 12px;
+	border: none;
+	border-bottom: 1px solid;
+	border-radius: 0px;
+	background-color: #fff;
+	border-color: #66afe9;
+	border-color: #000000;
+    outline: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.form-control:focus {
+    border-color: none;
+    outline: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
 
 .header {
-  font-family: 'Arial Normal', 'Arial';
-  color: #333;
-  text-align: center;
-  font-size: 1.9rem;
-  font-weight: 700;
-  margin: 5rem 0 2rem 0;
+	font-family: 'Arial Normal', 'Arial';
+	color: #333;
+	text-align: center;
+	font-size: 1.9rem;
+	font-weight: 700;
+	margin: 5rem 0 2rem 0;
 }
 
 .icon {
-  margin-top: 10px;
+	margin-top: 10px;
 }
