--- a/static/css/global.css
+++ b/static/css/global.css
@@ -504,14 +504,14 @@ body {
 
 .quit-div{margin: 2rem 0 0;text-align: right;}
 .quit-div button{margin-right: 2rem;border-radius: .3rem;padding:.5rem 1rem;border: 1px solid rgba(228, 228, 228, 1);background-color: #F2F2F2;}
-.log-img{background-color: #10AEFF;margin:0 auto;border-radius: 50%; width:15rem;height: 15rem;line-height: 15rem;}
+.log-img{background-color: #10AEFF;margin:0 auto;border-radius: 50%; width:10rem;height: 10rem;line-height: 10rem;}
 .you-name{font-family: 'Arial Negreta', 'Arial';font-weight: 700;font-size: 25px;text-align: center;margin: 1rem 0;}
 
 .show-p{margin:1.8rem 0 0 2rem;font-size: 16px;}
-.select-area{position: fixed;bottom: 0;left:0;width: 100%;border-top: 1px solid rgba(228, 228, 228, 1);}
+.select-area{background-color: white;position: fixed;bottom: 0;left:0;width: 100%;border-top: 1px solid rgba(228, 228, 228, 1);}
 .select-area>div{text-align: center;float:left;}
 .select-item{display: inline-block;width: 49.9%;border-bottom: 1px solid rgba(228, 228, 228, 1);padding: 3rem 0;position: relative}
-.clue{position: absolute;color: #ffffff;padding: .3rem .8rem .2rem;border-radius: 1rem;top: 22%;left: 50%;margin-left: .5rem;}
+.clue{position: absolute;color: #ffffff;padding: .3rem .8rem .2rem;border-radius: 1rem;top: 20%;left: 55%;margin-left: .5rem;}
 .bg-0{background-color: #0BBA05;}
 .bg-f{background-color: #FF0000;}
 .bg-e{background-color: #E4E4E4;}
@@ -528,13 +528,15 @@ body {
 .machine-number{margin-left: 2rem;}
 .machine-number>div{display: inline-block;text-align: center;width: 29%;margin-top: 2rem;}
 
-.content-block{overflow: hidden;margin-bottom: 1px;background-color: #ffffff;padding: .6rem .6rem;font-size: 14px;}
-.content-block>h3{font-weight: 700;font-size: 16px;}
-.content-block>p{margin: .8rem 0;min-height: 5rem;overflow: hidden;line-height: 20px;}
-.content-bottom>span{margin-right: 1rem;}
+.content-block{overflow: hidden;margin-bottom: 1px;background-color: #ffffff;padding: 5px 15px 5px 15px;font-size: 16px;}
+.content-block>h3{font-weight: 700;font-size: 18px;margin-top:10px;}
+.content-block>p{margin: .8rem 0;min-height: 5rem;overflow: hidden;line-height: 1.6;}
+.content-bottom {margin-top: 10px;margin-bottom:10px;}
+.content-bottom>span{margin-right: 1rem;color: #9a9a9a}
 .content-block-m>.content-bottom>span.pull-right{color: #4E90FF;}
-.ad-Reply{background-color: #F2F2F2;padding: .5rem .1rem;margin: 0 0 .4rem 0;}
-.ad-Reply>span{color: #4E90FF;}
+.ad-Reply{background-color: #F3F3F3;border:1px solid #e9ebea;padding: 10px 15px;margin: 0 0 .4rem 0;}
+.ad-Reply>span{color: #000000;line-height: 1.6;}
+.ad_name{color: #2196F3 !important;}
 .name-title{z-index: 1 !important;position:fixed;top:0;left: 0;color: #ffffff;background-color: rgba(56, 55, 60, 0.97);width: 100%;height: 42px;line-height:42px;font-size: 18px;padding: 0 .6rem;overflow: hidden;}
 .name-title a{color: #ffffff;border-left: 1px solid #ffffff;padding: 0 1.2rem;font-size: 15px;}
 .name-title a img{vertical-align: middle;margin-top: -.3rem}
