--- a/static/login/style.css
+++ b/static/login/style.css
@@ -32,7 +32,7 @@ footer {
 	margin: 0 auto;
 	text-align: center;
 	width: 100%;
-	height: 290px;
+	height: 200px;
 }
 
 footer p {
@@ -47,17 +47,15 @@ form div {
 	padding: 10px 0px 0px 0px;
 }
 
-form button {
-	position: relative;
-	top: 15px;
-}
-
 .container {
 	width: 90%;
 }
 
 .subimt_btn {
-	margin-top: 40px;
+	height: 50px;
+    width: 150px;
+    margin: 0 auto;
+	margin-top: 30px;
 	background-color: white;
 	color: chartreuse;
 	border: 1px solid chartreuse;
@@ -83,8 +81,7 @@ form button {
 	border-bottom: 1px solid;
 	border-radius: 0px;
 	background-color: #fff;
-	border-color: #66afe9;
-	border-color: #000000;
+	border-color: #000000 !important;
     outline: 0;
     -webkit-box-shadow: none;
     box-shadow: none;
