--- a/static/attendance/style.css
+++ b/static/attendance/style.css
@@ -1,16 +1,35 @@
 .top_div {
-  width: 95%;
-  background-color: #FFFFFF;
-  margin: 0 auto;
-  border-radius: 5px;
-  padding: 5px;
+	width: 95%;
+	background-color: #FFFFFF;
+	margin: 0 auto;
+	border-radius: 5px;
+	padding: 5px;
 }
 
 .font_color {
-  color: #34b64a;
-  font-weight: bold;
+	color: #34b64a;
+	font-weight: bold;
 }
 
 .margin-t-4 {
 	margin-top: 4rem;
+}
+
+.recent_div, .barinfo_div{
+	width: 95%;
+	font-size: 16px;
+	height: 145px;
+	overflow: hidden;
+	background-color: #FFFFFF;
+	border-radius: 5px;
+}
+
+.recent_div {
+	height: 280px;
+}
+
+.row_col {
+	border-bottom: 0.1rem solid #eee;
+	line-height: 32px;
+	display: block;
 }
