--- a/static/css/global.css
+++ b/static/css/global.css
@@ -511,7 +511,7 @@ body {
 .select-area{background-color: white;position: fixed;bottom: 0;left:0;width: 100%;border-top: 1px solid rgba(228, 228, 228, 1);}
 .select-area>div{text-align: center;float:left;}
 .select-item{display: inline-block;width: 49.9%;border-bottom: 1px solid rgba(228, 228, 228, 1);padding: 3rem 0;position: relative}
-.clue{position: absolute;color: #ffffff;padding: .3rem .8rem .2rem;border-radius: 1rem;top: 20%;left: 55%;margin-left: .5rem;}
+.clue{position: absolute;color: #ffffff;padding: .2rem .6rem .2rem;border-radius: 1rem;top: 20%;left: 55%;margin-left: 2rem;}
 .bg-0{background-color: #0BBA05;}
 .bg-f{background-color: #FF0000;}
 .bg-e{background-color: #E4E4E4;}
@@ -528,8 +528,8 @@ body {
 .machine-number{margin-left: 2rem;}
 .machine-number>div{display: inline-block;text-align: center;width: 29%;margin-top: 2rem;}
 
-.content-block{overflow: hidden;margin-bottom: 1px;background-color: #ffffff;padding: 5px 15px 5px 15px;font-size: 16px;}
-.content-block>h3{font-weight: 700;font-size: 18px;margin-top:10px;}
+.content-block{overflow: hidden;margin-bottom: 10px;background-color: #ffffff;padding: 5px 15px 5px 15px;font-size: 16px;}
+.content-block>h3{font-weight: 700;font-size: 16px;margin-top:10px;}
 .content-block>p{margin: .8rem 0;min-height: 5rem;overflow: hidden;line-height: 1.6;}
 .content-bottom {margin-top: 10px;margin-bottom:10px;}
 .content-bottom>span{margin-right: 1rem;color: #9a9a9a}
