--- a/static/attendance/style.css
+++ b/static/attendance/style.css
@@ -18,7 +18,7 @@
 .recent_div, .barinfo_div{
 	width: 95%;
 	font-size: 16px;
-	height: 148px;
+	height: 130px;
 	overflow: hidden;
 	background-color: #FFFFFF;
 	border-radius: 5px;
@@ -30,6 +30,11 @@
 
 .row_col {
 	border-bottom: 0.1rem solid #eee;
+	line-height: 32px;
+	display: block;
+}
+
+.row_col_no {
 	line-height: 32px;
 	display: block;
 }
