#前端最新修改

--- a/sea-modules/dropload/dropload.css
+++ b/sea-modules/dropload/dropload.css
@@ -1,3 +1,7 @@
+[genuitec-file-id="wc1-10"],[genuitec-lp-path="/weChat/WebRoot/sea-modules/dropload/dropload.css"],[genuitec-lp-enabled=true]{
+  /* for codelive */
+}
+
 .dropload-up,
 .dropload-down {
   position: relative;
