--- a/static/download/style.css
+++ b/static/download/style.css
@@ -1,5 +1,9 @@
+[genuitec-file-id="wc1-16"],[genuitec-lp-path="/weChat/WebRoot/static/download/style.css"],[genuitec-lp-enabled=false]{
+  /* for codelive */
+}
+
 .search-input {
-	margin-top: 2rem;
+	margin-top: 5rem;
 }
 
 .search_name {
