--- a/sea-modules/bootstrap-validator/bootstrapValidator.css
+++ b/sea-modules/bootstrap-validator/bootstrapValidator.css
@@ -1,3 +1,7 @@
+[genuitec-file-id="wc1-9"],[genuitec-lp-path="/weChat/WebRoot/sea-modules/bootstrap-validator/bootstrapValidator.css"],[genuitec-lp-enabled=false]{
+  /* for codelive */
+}
+
 /**
  * BootstrapValidator (http://bootstrapvalidator.com)
  * The best jQuery plugin to validate form fields. Designed to use with Bootstrap 3
