--- a/static/attendance/style.css
+++ b/static/attendance/style.css
@@ -1,3 +1,7 @@
+[genuitec-file-id="wc1-11"],[genuitec-lp-path="/weChat/WebRoot/static/attendance/style.css"],[genuitec-lp-enabled=true]{
+  /* for codelive */
+}
+
 .top_div {
 	width: 95%;
 	background-color: #FFFFFF;
@@ -18,7 +22,7 @@
 .recent_div, .barinfo_div{
 	width: 95%;
 	font-size: 16px;
-	height: 130px;
+	height: 194px;
 	overflow: hidden;
 	background-color: #FFFFFF;
 	border-radius: 5px;
