--- a/static/content/content.css
+++ b/static/content/content.css
@@ -1,3 +1,7 @@
+[genuitec-file-id="wc1-12"],[genuitec-lp-path="/weChat/WebRoot/static/content/content.css"],[genuitec-lp-enabled=true]{
+  /* for codelive */
+}
+
 @CHARSET "UTF-8";
 html,
 body {
@@ -84,4 +88,8 @@ a:focus {
 
 .row_col_t {
 	background: ghostwhite;
+}
+
+.t_padding {
+	margin-left: 12px;
 }
