--- a/static/index/style.css
+++ b/static/index/style.css
@@ -1,3 +1,7 @@
+[genuitec-file-id="wc1-17"],[genuitec-lp-path="/weChat/WebRoot/static/index/style.css"],[genuitec-lp-enabled=false]{
+  /* for codelive */
+}
+
 @CHARSET "UTF-8";
 
 html,body {
