--- a/static/login/style.css
+++ b/static/login/style.css
@@ -1,3 +1,7 @@
+[genuitec-file-id="wc1-18"],[genuitec-lp-path="/weChat/WebRoot/static/login/style.css"],[genuitec-lp-enabled=false]{
+  /* for codelive */
+}
+
 * {
 	margin: 0;
 	padding: 0;
